--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h1></h1>
 		</header>
 			<section id="content">
-				<canvas id="Starfield" data-processing-sources="Starfield.pde">
+				<canvas id="Starfield" data-processing-sources="Starfield.pde Eurostile.ttf">
 				</canvas>
 		    </section>
 	    <footer>
